--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -8,7 +8,7 @@
   bottom: 0;
   left: auto;
   margin: auto;
-  opacity: 0;
+  opacity: 100%;
 
   svg {
     width: 100%;
@@ -26,7 +26,7 @@
     left: 0;
     margin: auto;
     width: 100%;
-    opacity: 0;
+    opacity: 100%;
     transform: rotateZ(30deg);
     z-index: 1;
   }
