--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -166,3 +166,41 @@
     }
   }
 }
+.logo-container {
+  z-index: 0;
+  width: 400px;
+  height: 609px;
+  position: absolute;
+  top: 15%;
+  right: 20%;
+  bottom: 0;
+  left: auto;
+  margin: auto;
+  opacity: 100%;
+
+  svg {
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    transform: rotateZ(30deg) !important;
+    color: aqua;
+  }
+
+  .solid-logo {
+    position: absolute;
+    top: auto;
+    right: auto;
+    bottom: auto;
+    left: 0;
+    margin: auto;
+    width: 100%;
+    opacity: 100%;
+    transform: rotateZ(30deg);
+    z-index: 1;
+  }
+}
+
+.svg-container {
+  stroke: #000;
+  stroke-width: 10px;
+}
